@@ -1,3 +1,11 @@
+2008-08-28  Marcus Meissner  <marcus@jet.franken.de>
+
+	* gphoto2/main.c: Allow to specify a camera by port.
+
+	  For instance:
+		gphoto2 --port usb:005,003 --capture-image
+
+
 2008-05-24  Marcus Meissner  <marcus@jet.franken.de>
 
 	* gphoto2/{main.c,main.h,shell.c}:
